--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,27 +13,10 @@ keywords = ["plotters", "chart", "plot", "iced", "backend"]
 categories = ["visualization"]
 authors = ["Joylei <leingliu@gmail.com>"]
 
-[workspace]
-members = [".", "examples/split-chart"]
 
 [dependencies]
 plotters = { version = "0.3", default_features = false }
 plotters-backend = "0.3"
-iced_widget = { version = "0.12", features = ["canvas"] }
-iced_graphics = "0.12"
 once_cell = "1"
+libcosmic = { git = "https://github.com/pop-os/libcosmic", version = "0.1.0", default-features = false, features = ["wayland"] }
 
-[dev-dependencies]
-plotters = { version = "0.3", default_features = false, features = [
-    "chrono",
-    "area_series",
-    "line_series",
-    "point_series",
-] }
-iced = { version = "0.12", features = ["canvas", "tokio"] }
-chrono = { version = "0.4", default-features = false }
-rand = "0.8"
-tokio = { version = "1", features = ["rt"], default-features = false }
-
-[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
-sysinfo = { version = "0.30", default_features = false }
